--- a/taskpane.html
+++ b/taskpane.html
@@ -29,6 +29,6 @@
   </div>
 
   <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js"></script>
-  <script src="taskpane.js"></script>
+  <script src="https://kcd-ralph.github.io/vpt-assets/taskpane.js"></script>
 </body>
 </html>
