--- a/taskpane.html
+++ b/taskpane.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <title>VPT - Vulnerability Insert Tool</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link href="taskpane.css" rel="stylesheet" type="text/css" />
+  <link href="https://kcd-ralph.github.io/vpt-assets/taskpane.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
   <div class="container">
